# rs-rebuild-from-itunes-control

./: Cargo.toml  README.md
src/: lib.rs  main.rs  medialibrary.rs  metadata.rs
