[package]
name = "rebuild_from_itunes_control"
version = "0.1.0"
authors = ["Alisue <lambdalisue@hashnote.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rusqlite = "0.24.2"
serde = "1.0.119"
serde_derive = "1.0.119"
serde_rusqlite = "0.26.0"
clap = "3.0.0-beta.2"
id3 = "0.5.1"
mp4ameta = "0.8.0"
